# LSL-LeapMotion

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLeap.cmake
python/: README.md  leap_lsl.py  pyproject.toml
src/: main.cpp
